syntax = "proto3";

package changepassword;
option go_package = "github.com/xd-Abi/moxie-go/pkg/proto/change-password";

service ChangePasswordService {
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

message ChangePasswordRequest {
  string access_token = 1;
  string current_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool password_changed = 1;
}