syntax = "proto3";

package resetpassword;
option go_package = "github.com/xd-Abi/moxie-go/pkg/proto/reset-password";

service ResetPasswordService {
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}

message ResetPasswordRequest {
  string email = 1;
}

message ResetPasswordResponse {
  bool password_reset = 1;
}